Bug 1557160. Stop Event::GetScreenCoords from converting from visual to layout coords. r=botond

Screen coords are not layout coords.

Differential Revision: https://phabricator.services.mozilla.com/D74788